{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 175,
  "lineage": "956785df-5996-fc75-8f95-745e43ae8d41",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-10T02:15:42.428-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-bastion",
            "log_config": [],
            "name": "ground-up-app-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/networks/terraform-network",
            "priority": 1000,
            "project": "ground-up-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-10T02:15:42.614-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-http",
            "log_config": [],
            "name": "ground-up-app-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/networks/terraform-network",
            "priority": 1000,
            "project": "ground-up-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-06-10T02:15:42.432-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-internal",
            "log_config": [],
            "name": "ground-up-app-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/networks/terraform-network",
            "priority": 1000,
            "project": "ground-up-app",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/firewalls/ground-up-app-fw-allow-internal",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "all-in"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210609",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ground-up-app/zones/us-central1-a/disks/flask-vm-77b749"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ground-up-app/zones/us-central1-a/instances/flask-vm-77b749",
            "instance_id": "5855095993165178543",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "tolu.o@autochek.africa:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDrjWN9OEZ3rpVUDjt/pM6lYR94/dhnDE+02GqXieAnIof+1oc9RA7m9dqhAxb9i6jySQTCuf0we9ciLpAfQUu3iFKVOFXxduLqRR3B3FxDWkyrGR3DPxRwMOY2vl6DjmW9U/2bu+Hrw5WDR0baaPVg5RGhZqJHskUOgPn4sj+Rl3Vb1YoytBnufNDoUwuGphzi469/a1OhLeCuwOJiF6F5FJjYtq4Fz6wT4FZLO1CwRh6R4z1YPHFS10J/sOXvgn/bEPHnwlKa0tros2icBz7mXGBT57nLj7vuhmyZ7lRRjMw/DeONpe5cVqNkCYHJd5kKb9vezZCRlbwBKTofirWblvlUEq7oS7+SZcZ7fDig1LQ+BrSkJEedM/UiMObPpxsALAzv7rfo2OpCDmwGtcSwb+CM9r [...]
            },
            "metadata_fingerprint": "6uyAaKYE_U0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; sudo apt install git; pip install flask; pip install flask-migrate; pip install flask-script",
            "name": "flask-vm-77b749",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.228.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ground-up-app/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "ground-up-app"
              }
            ],
            "project": "ground-up-app",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ground-up-app/zones/us-central1-a/instances/flask-vm-77b749",
            "tags": [
              "all-in",
              "http",
              "ssh"
            ],
            "tags_fingerprint": "cRCjWS3IVqs=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/ground-up-app/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "ground-up-app",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ground-up-app/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}